appId: ${APP_ID}
---
- runFlow: ../shared/continue-as-guest.yaml
- tapOn: "Home"
- assertVisible:
    id: "screen.home"
- tapOn:
    text: "Calendar|Kalender"
- assertVisible:
    id: "screen.timetable"
- tapOn:
    text: "Map|Karte"
- assertVisible:
    id: "screen.map"
- tapOn:
    text: "Food|Essen"
- assertVisible:
    id: "screen.food"
- tapOn:
    text: "Profile|Profil"
- assertVisible:
    id: "screen.settings"
