appId: ${APP_ID}
---
- tapOn:
    text: "(Map|Karte)"
- runFlow:
    when:
      platform: Android
      visible: "(While using the app|Bei Nutzung der App)"
    commands:
      - tapOn: "(While using the app|Bei Nutzung der App)"
- runFlow:
    when:
      platform: iOS
      visible: "(Allow Once|Allow While Using App|Einmal erlauben|Beim Verwenden der App erlauben)"
    commands:
      - tapOn: "(Allow Once|Allow While Using App|Einmal erlauben|Beim Verwenden der App erlauben)"
- extendedWaitUntil:
    visible:
      id: "map-screen"
    timeout: 20000
- extendedWaitUntil:
    visible:
      id: "map-search-input"
    timeout: 20000
